Report malformed base-url and http_proxy as RestMisconfigurationException
Both were wrapped in a bare RuntimeException without the offending value, and
built with the deprecated URL(String) constructor. A blank http_proxy is now
treated as absent.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
(cherry picked from commit 04833117c088e8fbfec895e8974dcdc3e81982a3)